# orbit_rates

./: .gitignore  README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: bodyRates.ts  client.ts
frontend/src/components/: InputForm.tsx  JsonViewer.tsx  SummaryCards.tsx  TimeSeriesPlot.tsx
frontend/src/types/: api.ts
sat-body-rates/: README.md  pyproject.toml
sat-body-rates/backend/app/: main.py
sat-body-rates/backend/app/core/: attitude.py  body_rates.py  frames.py  orbit.py
sat-body-rates/backend/app/models/: schemas.py
sat-body-rates/backend/app/routers/: body_rates.py
sat-body-rates/tests/: test_core.py
